Correct spelling mistake in dictionary section of code

--- a/store_revenue_analysis.ipynb
+++ b/store_revenue_analysis.ipynb
@@ -107,10 +107,10 @@
     "\n",
     "#create a list of dictionaries \n",
     "data=[{'product_id':23, 'name':'computer','wholesale_price':500, 'retal_price':1000,'sales':100},\n",
-    "      {'product_id':96, 'name':'Python Workout','wholesale_price':35, 'retal_price':75,'sales':1000},\n",
-    "      {'product_id':97, 'name':'Pandas Workout','wholesale_price':35, 'retal_price':75,'sales':500},\n",
-    "      {'product_id':15, 'name':'banana','wholesale_price':0.5, 'retal_price':1,'sales':200},\n",
-    "      {'product_id':87, 'name':'sandwich','wholesale_price':3, 'retal_price':5,'sales':300}]\n",
+    "      {'product_id':96, 'name':'Python Workout','wholesale_price':35, 'retail_price':75,'sales':1000},\n",
+    "      {'product_id':97, 'name':'Pandas Workout','wholesale_price':35, 'retail_price':75,'sales':500},\n",
+    "      {'product_id':15, 'name':'banana','wholesale_price':0.5, 'retail_price':1,'sales':200},\n",
+    "      {'product_id':87, 'name':'sandwich','wholesale_price':3, 'retail_price':5,'sales':300}]\n",
     "\n",
     "#Assign the list to a pandas dataframe\n",
     "df=pd.DataFrame(data)\n",
