Add comment in second cell

--- a/store_revenue_analysis.ipynb
+++ b/store_revenue_analysis.ipynb
@@ -234,6 +234,7 @@
     "df['net_revenue_per_product']=(df['retail_price']-df['wholesale_price'])*df['sales']\n",
     "\n",
     "#display the dataframe\n",
+    "# print (\"DataFrame with Net Revenue per Product\")\n",
     "df.head()"
    ]
   },
