--- a/store_revenue_analysis.ipynb
+++ b/store_revenue_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "9b21a795-0c9a-4735-aea0-61a32f878783",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "4          87        sandwich              3.0             5    300"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
     "import pandas as pd \n",
     "\n",
     "#create a list of dictionaries \n",
-    "data=[{'product_id':23, 'name':'computer','wholesale_price':500, 'retal_price':1000,'sales':100},\n",
+    "data=[{'product_id':23, 'name':'computer','wholesale_price':500, 'retail_price':1000,'sales':100},\n",
     "      {'product_id':96, 'name':'Python Workout','wholesale_price':35, 'retail_price':75,'sales':1000},\n",
     "      {'product_id':97, 'name':'Pandas Workout','wholesale_price':35, 'retail_price':75,'sales':500},\n",
     "      {'product_id':15, 'name':'banana','wholesale_price':0.5, 'retail_price':1,'sales':200},\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "66d450d7-86c4-4cfc-86f2-6ac3abe66a45",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
        "4                    600.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "124198af-aa7f-4eae-b863-9f1eb8665062",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "029b2244-dce7-40a0-8e4e-7cd86b99f3b0",
    "metadata": {},
    "outputs": [
@@ -288,21 +288,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "13b4c7a2-3374-494d-b9b6-803cae7b5c88",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>category</th>\n",
+       "      <th>total_net_revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>books</td>\n",
+       "      <td>60000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>computers</td>\n",
+       "      <td>50000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>food</td>\n",
+       "      <td>700.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "category\n",
-       "books        60000.0\n",
-       "computers    50000.0\n",
-       "food           700.0\n",
-       "Name: net_revenue_per_product, dtype: float64"
+       "    category  total_net_revenue\n",
+       "0      books            60000.0\n",
+       "1  computers            50000.0\n",
+       "2       food              700.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,13 +366,15 @@
     "# use the groupby and sum function to aggregate data in the net revenue per product column\n",
     "# create a new dataframe for the categories and net revenue \n",
     "net_revenue_by_category=df.groupby(['category'])['net_revenue_per_product'].sum()\n",
+    "# rename the second column \n",
+    "net_revenue_by_category = net_revenue_by_category.reset_index(name='total_net_revenue')\n",
     "net_revenue_by_category.head()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6c2d9979-89bd-4b72-8011-298cdd84ec14",
    "metadata": {},
    "outputs": [
@@ -360,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "abec9f1e-01e7-4871-8aac-d866821d8617",
    "metadata": {},
    "outputs": [
@@ -530,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
